_sass/addon/commons.scss
/* ... */
/* --- Begin of Markdown table style --- */

/* it will be created by Liquid */
.table-wrapper {
  overflow-x: auto;
  margin-bottom: 1.5rem;

  > table {
    min-width: 100%;
    overflow-x: auto;
    border-spacing: 0;

    thead {
      border-bottom: solid 2px rgba(210, 215, 217, 0.75);

      th {
        @extend %table-cell;
      }
    }

    tbody {
      tr {
        border-bottom: 1px solid var(--tb-border-color);

        &:nth-child(2n) {
          background-color: var(--tb-even-bg);
        }

        &:nth-child(2n + 1) {
          background-color: var(--tb-odd-bg);
        }

        td {
          @extend %table-cell;
        }
      }
    } /* tbody */
  } /* table */
}

/* --- post --- */

.post-preview {
  @extend %rounded;

  border: 0;
  background: var(--card-bg);
  box-shadow: var(--card-shadow);

  &::before {
    @extend %rounded;

    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: var(--card-hovor-bg);
    opacity: 0;
    transition: opacity 0.35s ease-in-out;
  }

  &:hover {
    &::before {
      opacity: 0.3;
    }
  }
}

.post {
  h1 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }

  p {
    > img[data-src],
    > a.popup {
      &:not(.normal):not(.left):not(.right) {
        @include align-center;
      }
    }
  }
}

.post-meta {
  font-size: 0.85rem;

  a {
    &:not([class]):hover {
      @extend %link-hover;
    }
  }

  em {
    @extend %normal-font-style;
  }
}

.post-content {
  font-size: 1.08rem;
  margin-top: 2rem;
  overflow-wrap: break-word;

  a {
    &.popup {
      @extend %no-cursor;
      @extend %img-caption;
      @include mt-mb(0.5rem);

      cursor: zoom-in;
    }

    &:not(.img-link) {
      @extend %link-underline;

      &:hover {
        @extend %link-hover;
      }
    }
  }

  ol,
  ul {
    &:not([class]),
    &.task-list {
      -webkit-padding-start: 1.75rem;
      padding-inline-start: 1.75rem;

      li {
        margin: 0.25rem 0;
        padding-left: 0.25rem;
      }

      ol,
      ul {
        -webkit-padding-start: 1.25rem;
        padding-inline-start: 1.25rem;
        margin: 0.5rem 0;
      }
    }
  }

  ul.task-list {
    -webkit-padding-start: 1.25rem;
    padding-inline-start: 1.25rem;

    li {
      list-style-type: none;
      padding-left: 0;

      /* checkbox icon */
      > i {
        width: 2rem;
        margin-left: -1.25rem;
        color: var(--checkbox-color);

        &.checked {
          color: var(--checkbox-checked-color);
        }
      }

      ul {
        -webkit-padding-start: 1.75rem;
        padding-inline-start: 1.75rem;
      }
    }

    input[type='checkbox'] {
      margin: 0 0.5rem 0.2rem -1.3rem;
      vertical-align: middle;
    }
  } /* ul */

  dl > dd {
    margin-left: 1rem;
  }

  ::marker {
    color: var(--text-muted-color);
  }
} /* .post-content */

.tag:hover {
  @extend %tag-hover;
}

.post-tag {
  display: inline-block;
  min-width: 2rem;
  text-align: center;
  border-radius: 0.3rem;
  padding: 0 0.4rem;
  color: inherit;
  line-height: 1.3rem;

  &:not(:last-child) {
    margin-right: 0.2rem;
  }
}

.rounded-10 {
  border-radius: 10px !important;
}

.img-link {
  color: transparent;
  display: inline-flex;
}

.shimmer {
  overflow: hidden;
  position: relative;
  background: var(--img-bg);

  &::before {
    content: '';
    position: absolute;
    background: var(--shimmer-bg);
    height: 100%;
    width: 100%;
    -webkit-animation: shimmer 1s infinite;
    animation: shimmer 1s infinite;
  }

  @-webkit-keyframes shimmer {
    0% {
      transform: translateX(-100%);
    }
    100% {
      transform: translateX(100%);
    }
  }

  @keyframes shimmer {
    0% {
      transform: translateX(-100%);
    }
    100% {
      transform: translateX(100%);
    }
  }
}

.embed-video {
  width: 100%;
  height: 100%;
  margin-bottom: 1rem;

  @extend %rounded;

  &.youtube {
    aspect-ratio: 16 / 9;
  }

  &.twitch {
    aspect-ratio: 310 / 189;
  }
}

/* --- buttons --- */
.btn-lang {
  border: 1px solid !important;
  padding: 1px 3px;
  border-radius: 3px;
  color: var(--link-color);

  &:focus {
    box-shadow: none;
  }
}

/* --- Effects classes --- */

.loaded {
  display: block !important;

  @at-root .d-flex#{&} {
    display: flex !important;
  }
}

.unloaded {
  display: none !important;
}

.visible {
  visibility: visible !important;
}

.hidden {
  visibility: hidden !important;
}

.flex-grow-1 {
  flex-grow: 1 !important;
}

.btn-box-shadow {
  box-shadow: 0 0 8px 0 var(--btn-box-shadow) !important;
}

/* overwrite bootstrap muted */
.text-muted {
  color: var(--text-muted-color) !important;
}

/* Overwrite bootstrap tooltip */
.tooltip-inner {
  font-size: 0.7rem;
  max-width: 220px;
  text-align: left;
}

/* Overwrite bootstrap outline button */
.btn.btn-outline-primary {
  &:not(.disabled):hover {
    border-color: #007bff !important;
  }
}

.disabled {
  color: rgb(206, 196, 196);
  pointer-events: auto;
  cursor: not-allowed;
}

.hide-border-bottom {
  border-bottom: none !important;
}

.input-focus {
  box-shadow: none;
  border-color: var(--input-focus-border-color) !important;
  background: center !important;
  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
}

.left {
  float: left;
  margin: 0.75rem 1rem 1rem 0 !important;
}

.right {
  float: right;
  margin: 0.75rem 0 1rem 1rem !important;
}

/* --- Overriding --- */

/* magnific-popup */

figure .mfp-title {
  text-align: center;
  padding-right: 0;
  margin-top: 0.5rem;
}

.mfp-img {
  transition: none;
}

/* mermaid */
.mermaid {
  text-align: center;
}

/* MathJax */
mjx-container {
  overflow-y: hidden;
  min-width: auto !important;
}
/* ... */

